--- a/topografiya/templates/leader/show_pdowork.html
+++ b/topografiya/templates/leader/show_pdowork.html
@@ -54,7 +54,7 @@
                                                                                 <div class="mb-2">
                                                                                     <b>{% trans "Сроки выполнения" %}<sup
                                                                                             style="color: red;">*</sup></b>
-                                                                                    <p>{{ pdowork.work_term }} kun</p>
+                                                                                    <p>{{ pdowork.work_term.amount }} {% trans "День" %}</p>
                                                                                 </div>
                                                                                 <div class="mb-2">
                                                                                     <b>{% trans "Реквизиты заказчика" %}<sup
@@ -307,7 +307,7 @@
                                                                                     <input class="form-control digits"
                                                                                            id="example-datetime-local-input"
                                                                                            type="text"
-                                                                                           value="{{ pdowork.work_term }} kun">
+                                                                                           value="{{ pdowork.work_term.amount }} ">
                                                                                 </div>
                                                                             </div>
 
