--- a/topografiya/templates/index.html
+++ b/topografiya/templates/index.html
@@ -46,7 +46,7 @@
                                 <div class="fc-day-event one" id="one">
                                     <span class="count"></span>
                                             <div class="modal fade bd-example-modal-lg" tabindex="-1" style="display: none;" aria-hidden="true">
-                                                <div class="modal-dialog modal-lg">
+                                                <div class="modal-dialog modal-xl">
                                                     <div class="modal-content">
                                                         <div class="modal-header">
                                                             <h4 class="modal-title" id="myLargeModalLabel">{% trans "Выполняемые работы" %}</h4>
@@ -108,7 +108,7 @@
                                 {% if user.profile.status == '0' %}
                                 {% for work in work_new_works %}
                                 <p class="time" id="time" style="display: none">{{ work.pdowork.agreement_date }}</p>
-                                <p class="term" id="term"  style="display: none">{{ work.pdowork.work_term }}</p>
+                                <p class="term" id="term"  style="display: none">{{ work.pdowork.work_term.amount }}</p>
 
 
                                 <div class="fc-day-event one" id="one">
@@ -214,7 +214,7 @@
                                                                                     <td>{{ work.object.pdowork.customer_info}}</td>
                                                                                     <td>{{ work.object.pdowork.object_name}}</td>
                                                                                     <td>{{ work.object.pdowork.work_type}}</td>
-                                                                                    <td>{{ work.object.pdowork.work_term}} {% trans "День" %}</td>
+                                                                                    <td>{{ work.object.pdowork.work_term.amount}} {% trans "День" %}</td>
 {#                                                                                    <td><a href="#" class="btn btn-primary">Ko'rish</a></td>#}
                                                                                     <td class="text-center"><a href="{% url 'status_work' id=work.object.pdowork.id %}" class="btn btn-success">{% trans "Просмотр" %}</a></td>
                                                                           </tr>
