--- a/topografiya/templates/leader/polevoy/checking_polevoy_works.html
+++ b/topografiya/templates/leader/polevoy/checking_polevoy_works.html
@@ -58,7 +58,7 @@
                       <div class="col-lg-6 text-end">
                           <div class="mb-2">
                               <b>{% trans "Сроки выполнения" %}<sup style="color: red;">*</sup></b>
-                              <p>{{ pdowork.pdowork.work_term }} {% trans "День" %}</p>
+                              <p>{{ pdowork.pdowork.work_term.amount }} {% trans "День" %}</p>
                           </div>
                           <div class="mb-2">
                               <b>{% trans "Реквизиты заказчика" %}<sup style="color: red;">*</sup></b>
@@ -83,7 +83,7 @@
                           <a href="/{{ pdowork.pdowork.latter }}" target="_blank"><h6 class=""> <i class="fa fa-file-word-o"></i>{% trans "Ознакомление с письмом заказчика" %} </h6></a>
                       </div>
                       <div class="col-md-12">
-                          <a href="/{{ pdowork.pdowork.tz }}" target="_blank"><h6 class=""> <i class="fa fa-file-word-o"></i>{% trans " Ознакомление с техническим заданием" %}</h6></a>
+                          <a href="/{{ pdowork.pdowork.tz }}" target="_blank"><h6 class=""> <i class="fa fa-file-word-o"></i>{% trans "Ознакомление с техническим заданием" %}</h6></a>
                       </div>
                       <div class="col-md-12">
                           <a href="/{{ pdowork.pdowork.smeta }}" target="_blank"><h6 class=""> <i class="fa fa-file-word-o"></i>{% trans "Ознакомление со сметой" %} </h6></a>
@@ -115,7 +115,7 @@
                                             <li>
                                             <ul>
                                                <li class="p-1"><b class="text-primary">{% trans "Причина возврата" %}: </b> {{ work.reason }}</li>
-                                                <li class="p-1"><a href="/{{ work.rejected_file }}" target="_blank"><i class="fa fa-file-pdf-o"></i> {% trans "Акт полевого контроля" %}  <b>{{ work.version }}</b></a></li>
+                                                <li class="p-1"><a href="/{{ work.rejected_file }}" target="_blank"><i class="fa fa-file-pdf-o"></i> {% trans "АКТ программа работ" %}  <b>{{ work.version }}</b></a></li>
                                                 {% if work.file %}
                                                     <li class="p-1"><a href="/{{ work.file }}" target="_blank"><i class="fa fa-file-pdf-o"></i> {% trans "Ошибка приложения" %}</a></li>
                                                 {% endif %}
